--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,33 +24,32 @@
 <div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.</div>
  -->
 
- <footer class="footer mt-auto p-0 justify-content-center text-monospace">
-    
-  <div class="container-fluid m-0 p-0  justify-content-center small">
-      <div class="row justify-content-center m-0 p-0">
-          <ul class="list-inline list-social-icons my-0 text-center">
-              <li class="list-inline-item my-0 py-0 px-1">
-                  <a target="_blank" href="https://scholar.google.com/citations?user=pRzzxRkAAAAJ&hl=en" class="text-secondary">
-                      <span class="ai ai-google-scholar"></span> Google Scholar
-                  </a>
-              </li>
-              <li class="list-inline-item my-0 py-0 px-1">
-                  <a target="_blank" href="https://www.linkedin.com/in/gabrielaraujofe/" class="text-secondary">
-                      <i class="fab fa-linkedin-in"></i> LinkedIn
-                  </a>
-              </li>
-              <li class="list-inline-item my-0 py-0 px-1">
-                  <a target="_blank" href="https://github.com/gabrujo" class="text-secondary">
-                      <i class="fab fa-github"></i> GitHub
-                  </a>
-              </li> 
-          </ul>
-      </div>
-      <div class="row justify-content-center m-0 p-0">
-          <span class="">
-              <i class="far fa-copyright"></i>
-              <span class="mx-1">Gabriel Ferreira Araujo</span>
-          </span>
-      </div>
+<footer class="footer mt-auto p-0 justify-content-center text-monospace">
+  <div class="container-fluid m-0 p-2 justify-content-center small"> <!-- Adjusted padding here -->
+    <div class="row justify-content-center m-0 p-0">
+      <ul class="list-inline list-social-icons my-0 text-center d-flex"> <!-- Added d-flex class for flexbox -->
+        <li class="list-inline-item my-0 py-0 px-1">
+          <a target="_blank" href="https://scholar.google.com/citations?user=pRzzxRkAAAAJ&hl=en" class="text-secondary">
+            <span class="ai ai-google-scholar"></span> Google Scholar
+          </a>
+        </li>
+        <li class="list-inline-item my-0 py-0 px-1">
+          <a target="_blank" href="https://www.linkedin.com/in/gabrielaraujofe/" class="text-secondary">
+            <i class="fab fa-linkedin-in"></i> LinkedIn
+          </a>
+        </li>
+        <li class="list-inline-item my-0 py-0 px-1">
+          <a target="_blank" href="https://github.com/gabrujo" class="text-secondary">
+            <i class="fab fa-github"></i> GitHub
+          </a>
+        </li> 
+      </ul>
+    </div>
+    <div class="row justify-content-center m-0 p-0">
+      <span class="">
+        <i class="far fa-copyright"></i>
+        <span class="mx-1">Gabriel Ferreira Araujo</span>
+      </span>
+    </div>
   </div>
 </footer>
