--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,33 +1,47 @@
-<!-- {% include base_path %}
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css"> 
+</head>
+<body> -->
 
-<div class="page__footer-follow">
-  <ul class="social-icons">
-    {% if site.data.ui-text[site.locale].follow_label %}
-      <li><strong>{{ site.data.ui-text[site.locale].follow_label }}</strong></li>
-    {% endif %}
-    {% if site.twitter.username %}
-      <li><a href="https://twitter.com/{{ site.twitter.username }}"><i class="fab fa-twitter-square" aria-hidden="true"></i> Twitter</a></li>
-    {% endif %}
-    {% if site.facebook.username %}
-      <li><a href="https://facebook.com/{{ site.facebook.username }}"><i class="fab fa-facebook-square" aria-hidden="true"></i> Facebook</a></li>
-    {% endif %}
-    {% if site.author.github %}
-      <li><a href="http://github.com/{{ site.author.github }}"><i class="fab fa-github" aria-hidden="true"></i> GitHub</a></li>
-    {% endif %}
-    {% if site.author.bitbucket %}
-      <li><a href="http://bitbucket.org/{{ site.author.bitbucket }}"><i class="fab fa-bitbucket" aria-hidden="true"></i> Bitbucket</a></li>
-    {% endif %}
-    <li><a href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ base_path }}/feed.xml{% endif %}"><i class="fa fa-fw fa-rss-square" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}</a></li>
-  </ul>
-</div>
+<footer class="footer">
+  <div class="container">
+    <ul class="social-icons">
+      <li>
+        <a target="_blank" href="https://scholar.google.com/citations?user=pRzzxRkAAAAJ&hl=en" class="text-secondary">
+          <span class="ai ai-google-scholar"></span> Google Scholar
+        </a>
+      </li>
+      <li>
+        <a target="_blank" href="https://www.linkedin.com/in/gabrielaraujofe/" class="text-secondary">
+          <i class="fab fa-linkedin-in"></i> LinkedIn
+        </a>
+      </li>
+      <li>
+        <a target="_blank" href="https://github.com/gabrujo" class="text-secondary">
+          <i class="fab fa-github"></i> GitHub
+        </a>
+      </li>
+    </ul>
+    <div class="copyright">
+      <span>
+        <i class="far fa-copyright"></i>
+        <span class="mx-1">Gabriel Ferreira Araujo</span>
+      </span>
+    </div>
+  </div>
+</footer>
 
-<div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.</div>
- -->
+</body>
+</html>
 
-<footer class="footer mt-auto p-0 justify-content-center text-monospace">
-  <div class="container-fluid m-0 p-2 justify-content-center small"> <!-- Adjusted padding here -->
+<!-- <footer class="footer mt-auto p-0 justify-content-center text-monospace">
+  <div class="container-fluid m-0 p-2 justify-content-center small"> 
     <div class="row justify-content-center m-0 p-0">
-      <ul class="list-inline list-social-icons my-0 text-center d-flex"> <!-- Added d-flex class for flexbox -->
+      <ul class="list-inline list-social-icons my-0 text-center d-flex"> 
         <li class="list-inline-item my-0 py-0 px-1">
           <a target="_blank" href="https://scholar.google.com/citations?user=pRzzxRkAAAAJ&hl=en" class="text-secondary">
             <span class="ai ai-google-scholar"></span> Google Scholar
@@ -53,3 +67,4 @@
     </div>
   </div>
 </footer>
+ -->
