--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,70 +1,45 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" class="no-js">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css"> 
+  <!-- Your head content remains unchanged -->
 </head>
-<body> -->
+<body>
+  <!-- Your existing content remains unchanged -->
 
-<footer class="footer">
-  <div class="container">
-    <ul class="social-icons">
-      <li>
-        <a target="_blank" href="https://scholar.google.com/citations?user=pRzzxRkAAAAJ&hl=en" class="text-secondary">
-          <span class="ai ai-google-scholar"></span> Google Scholar
-        </a>
-      </li>
-      <li>
-        <a target="_blank" href="https://www.linkedin.com/in/gabrielaraujofe/" class="text-secondary">
-          <i class="fab fa-linkedin-in"></i> LinkedIn
-        </a>
-      </li>
-      <li>
-        <a target="_blank" href="https://github.com/gabrujo" class="text-secondary">
-          <i class="fab fa-github"></i> GitHub
-        </a>
-      </li>
-    </ul>
-    <div class="copyright">
-      <span>
-        <i class="far fa-copyright"></i>
-        <span class="mx-1">Gabriel Ferreira Araujo</span>
-      </span>
-    </div>
-  </div>
-</footer>
+  <!-- Existing footer code (remove this) -->
+  <!--<footer class="footer mt-auto p-0 justify-content-center text-monospace" -->
+   
+  <!--</footer>-->
 
-</body>
-</html>
-
-<!-- <footer class="footer mt-auto p-0 justify-content-center text-monospace">
-  <div class="container-fluid m-0 p-2 justify-content-center small"> 
-    <div class="row justify-content-center m-0 p-0">
-      <ul class="list-inline list-social-icons my-0 text-center d-flex"> 
-        <li class="list-inline-item my-0 py-0 px-1">
+  <!-- Updated footer code -->
+  <footer class="footer">
+    <div class="container">
+      <ul class="social-icons">
+        <li>
           <a target="_blank" href="https://scholar.google.com/citations?user=pRzzxRkAAAAJ&hl=en" class="text-secondary">
             <span class="ai ai-google-scholar"></span> Google Scholar
           </a>
         </li>
-        <li class="list-inline-item my-0 py-0 px-1">
+        <li>
           <a target="_blank" href="https://www.linkedin.com/in/gabrielaraujofe/" class="text-secondary">
             <i class="fab fa-linkedin-in"></i> LinkedIn
           </a>
         </li>
-        <li class="list-inline-item my-0 py-0 px-1">
+        <li>
           <a target="_blank" href="https://github.com/gabrujo" class="text-secondary">
             <i class="fab fa-github"></i> GitHub
           </a>
-        </li> 
+        </li>
       </ul>
+      <div class="copyright">
+        <span>
+          <i class="far fa-copyright"></i>
+          <span class="mx-1">Gabriel Ferreira Araujo</span>
+        </span>
+      </div>
     </div>
-    <div class="row justify-content-center m-0 p-0">
-      <span class="">
-        <i class="far fa-copyright"></i>
-        <span class="mx-1">Gabriel Ferreira Araujo</span>
-      </span>
-    </div>
-  </div>
-</footer>
- -->
+  </footer>
+
+  <!-- Your existing scripts and analytics -->
+</body>
+</html>
