--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,6 +1,4 @@
-/* ==========================================================================
-   FOOTER
-   ========================================================================== */
+/* Add these styles to your existing SCSS file */
 
 .page__footer {
   @include clearfix;
@@ -9,17 +7,15 @@
   margin-right: 0;
   width: 100%;
   clear: both;
-  /* sticky footer fix start */
   position: absolute;
   bottom: 0em;
   height: auto;
-  /* sticky footer fix end */
   margin-top: 3em;
   color: mix(#fff, $gray, 25%);
   -webkit-animation: intro 0.3s both;
-          animation: intro 0.3s both;
+  animation: intro 0.3s both;
   -webkit-animation-delay: 0.45s;
-          animation-delay: 0.45s;
+  animation-delay: 0.45s;
   background-color: $lighter-gray;
   border-top: 1px solid $light-gray;
 
@@ -50,6 +46,26 @@
   .far,
   .fal {
     color: mix(#fff, $gray, 25%);
+  }
+
+  /* Add the following styles for the horizontal layout */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .social-icons {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+  }
+
+  .social-icons li {
+    margin-right: 10px;
+  }
+
+  .social-icons a {
+    white-space: nowrap;
   }
 }
 
@@ -82,11 +98,5 @@
   a {
     padding-right: 10px;
     font-weight: bold;
-  }
-
-  .social-icons {
-    a {
-      white-space: nowrap;
-    }
   }
 }
