--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,4 +1,3 @@
-/* Add these styles to your existing SCSS file */
 
 .page__footer {
   @include clearfix;
@@ -18,6 +17,7 @@
   animation-delay: 0.45s;
   background-color: $lighter-gray;
   border-top: 1px solid $light-gray;
+  text-align: center; /* Center-align text content */
 
   footer {
     @include clearfix;
@@ -58,6 +58,7 @@
     margin: 0;
     padding: 0;
     display: flex;
+    text-align: center;
   }
 
   .social-icons li {
@@ -73,7 +74,7 @@
 .page__footer-copyright {
   font-family: $global-font-family;
   font-size: $type-size-6; /* Adjust the font size as needed */
-  margin-top: 0.5em; /* Adjust the top margin as needed */
+  margin-top: 0.1em; /* Adjust the top margin as needed */
 }
 
 .page__footer-follow {
@@ -105,7 +106,7 @@
 
 .page__footer .full-name {
   font-size: $type-size-5; /* Adjust the font size as needed */
-  margin-bottom: 0.5em; /* Adjust the bottom margin as needed */
+  margin-bottom: 0.1em; /* Adjust the bottom margin as needed */
 }
 
 .page__footer .social-icons .ai {
