--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,7 @@
     </ul>
     <div class="copyright">
       <span>
-        <i class="far fa-copyright"></i>
+        <i class="fas fa-copyright"></i>
         <span class="mx-1">Gabriel Ferreira Araujo</span>
       </span>
     </div>
