--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,11 @@
   <div class="container">
     <ul class="social-icons">
       <li>
+        <a target="_blank" href="mailto:gabrielaraujofe@gmail.com" class="text-secondary">
+          <i class="far fa-envelope"></i> Email
+        </a>
+      </li>      
+      <li>
         <a target="_blank" href="https://scholar.google.com/citations?user=pRzzxRkAAAAJ&hl=en" class="text-secondary">
           <span class="ai ai-google-scholar"></span> Google Scholar
         </a>
@@ -19,9 +24,9 @@
     </ul>
     <div class="copyright">
       <span>
-        <i class="fas fa-copyright"></i>
+        <i class="fas fa-copyright text-black bg-white"></i>
         <span class="mx-1">Gabriel Ferreira Araujo</span>
-      </span>
+      </span>      
     </div>
   </div>
 </footer>
