--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -74,7 +74,7 @@
 .page__footer-copyright {
   font-family: $global-font-family;
   font-size: $type-size-6; /* Adjust the font size as needed */
-  margin-top: 0.1em; /* Adjust the top margin as needed */
+  margin-top: 2.0em; /* Adjust the top margin as needed */
 }
 
 .page__footer-follow {
@@ -106,10 +106,18 @@
 
 .page__footer .full-name {
   font-size: $type-size-5; /* Adjust the font size as needed */
-  margin-bottom: 0.1em; /* Adjust the bottom margin as needed */
+  margin-bottom: 2.0em; /* Adjust the bottom margin as needed */
 }
 
 .page__footer .social-icons .ai {
   font-size: $type-size-6; /* Adjust the font size for Google Scholar icon */
+}
+
+.text-black {
+  color: #000 !important; /* You can adjust the color code as needed */
+}
+
+.bg-white {
+  background-color: #fff !important; /* You can adjust the color code as needed */
 }
 
