html and scss changes

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -74,7 +74,7 @@
 .page__footer-copyright {
   font-family: $global-font-family;
   font-size: $type-size-6; /* Adjust the font size as needed */
-  margin-top: 2.0em; /* Adjust the top margin as needed */
+  margin-top: 1cm; /* Adjust the top margin as needed */
 }
 
 .page__footer-follow {
@@ -105,8 +105,8 @@
 }
 
 .page__footer .full-name {
-  font-size: $type-size-4; /* Adjust the font size as needed */
-  margin-bottom: 2.0em; /* Adjust the bottom margin as needed */
+  font-size: $type-size-3; /* Adjust the font size as needed */
+  margin-bottom: 1cm; /* Adjust the bottom margin as needed */
 }
 
 .page__footer .social-icons .ai {
