--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <ul class="social-icons">
       <li>
         <a target="_blank" href="mailto:gabrielaraujofe@gmail.com" class="text-secondary">
-          <i class="far fa-envelope"></i> Email
+          <i class="fas fa-envelope"></i> Email
         </a>
       </li>      
       <li>
@@ -24,9 +24,9 @@
     </ul>
     <div class="copyright">
       <span>
-        <i class="fas fa-copyright text-black bg-white"></i>
+        <i class="fas fa-circle text-black bg-white"></i>
         <span class="mx-1">Gabriel Ferreira Araujo</span>
-      </span>      
+      </span>         
     </div>
   </div>
 </footer>
