additional changes in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,9 +24,9 @@
     </ul>
     <div class="copyright">
       <span>
-        <i class="fas fa-circle text-black bg-white"></i>
-        <span class="mx-1">Gabriel Ferreira Araujo</span>
-      </span>         
+        ©
+        <span class="mx-1 full-name">Gabriel Ferreira Araujo</span>
+      </span>        
     </div>
   </div>
 </footer>
