--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -23,7 +23,8 @@
     @include clearfix;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 2em;
+    margin-top: 0.2em;
+    margin-bottom: 0.2em;
     max-width: 100%;
     padding: 0 1em 2em;
 
