--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -9,7 +9,8 @@
   position: absolute;
   bottom: 0em;
   height: auto;
-  margin-top: 3em;
+  margin-top: 0.01em;
+  margin-bottom: 0.01em;
   color: mix(#fff, $gray, 25%);
   -webkit-animation: intro 0.3s both;
   animation: intro 0.3s both;
@@ -23,7 +24,8 @@
     @include clearfix;
     margin-left: auto;
     margin-right: auto;
-    //margin-top: 2em;
+    margin-top: 0.01em;
+    margin-bottom: 0.01em;
     max-width: 100%;
     padding: 0 1em 2em;
 
@@ -73,7 +75,7 @@
 
 .page__footer-copyright {
   font-family: $global-font-family;
-  font-size: $type-size-6; /* Adjust the font size as needed */
+  font-size: $type-size-2; /* Adjust the font size as needed */
   margin-top: 0.1cm; /* Adjust the top margin as needed */
 }
 
