--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -10,7 +10,7 @@
   bottom: 0em;
   height: auto;
   margin-top: 0.01em;
-  margin-bottom: 0.01em;
+  margin-bottom: 0; /* Remove bottom margin */
   color: mix(#fff, $gray, 25%);
   -webkit-animation: intro 0.3s both;
   animation: intro 0.3s both;
@@ -25,7 +25,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 0.01em;
-    margin-bottom: 0.01em;
+    margin-bottom: 0; /* Remove bottom margin */
     max-width: 100%;
     padding: 0 1em 2em;
 
@@ -107,9 +107,9 @@
 }
 
 .page__footer .full-name {
-  font-size: $type-size-2; /* Adjust the font size as needed */
+  font-size: $type-size-3; /* Adjust the font size as needed */
   margin-top: 0.1em; /* Adjust the top margin as needed */
-  margin-bottom: 0.1em; 
+  margin-bottom: 0.1em; /* Adjust the bottom margin as needed */
 }
 
 .page__footer .social-icons .ai {
