--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,7 @@
     <div class="copyright">
       <span>
         ©
-        <span class="mx-1 full-name">Gabriel Ferreira Araujo</span>
+        <span class="mx-1 full-name" style="font-size: smaller;">Gabriel Ferreira Araujo</span>
       </span>        
     </div>
   </div>
