--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -61,6 +61,7 @@
     padding: 0;
     display: flex;
     text-align: center;
+    margin-bottom: 0;
   }
 
   .social-icons li {
@@ -77,6 +78,7 @@
   font-family: $global-font-family;
   font-size: $type-size-2; /* Adjust the font size as needed */
   margin-top: 0.1cm; /* Adjust the top margin as needed */
+  margin-bottom: 0;
 }
 
 .page__footer-follow {
