--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,5 +1,4 @@
-
-page__footer {
+.page__footer {
   @include clearfix;
   float: left;
   margin-left: 0;
@@ -9,8 +8,7 @@ page__footer {
   position: absolute;
   bottom: 0em;
   height: auto;
-  margin-top: 0;
-  margin-bottom: 0; /* Remove bottom margin */
+  margin: 0; /* Reset margins */
   color: mix(#fff, $gray, 25%);
   -webkit-animation: intro 0.3s both;
   animation: intro 0.3s both;
@@ -24,8 +22,7 @@ page__footer {
     @include clearfix;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 0.01em;
-    margin-bottom: 0; /* Remove bottom margin */
+    margin: 0; /* Reset margins */
     max-width: 100%;
     padding: 0 1em 2em;
 
@@ -77,8 +74,7 @@ page__footer {
 .page__footer-copyright {
   font-family: $global-font-family;
   font-size: $type-size-2; /* Adjust the font size as needed */
-  margin-top: 0.1cm; /* Adjust the top margin as needed */
-  margin-bottom: 0; /* Remove bottom margin */
+  margin: 0; /* Reset margins */
 }
 
 .page__footer-follow {
@@ -110,8 +106,7 @@ page__footer {
 
 .page__footer .full-name {
   font-size: $type-size-3; /* Adjust the font size as needed */
-  margin-top: 0.1em; /* Adjust the top margin as needed */
-  margin-bottom: 0; /* Remove bottom margin */
+  margin: 0; /* Reset margins */
 }
 
 .page__footer .social-icons .ai {
